@@ -1,5 +1,8 @@
 2011-10-10  Andreas Schwab  <schwab@linux-m68k.org>
 
+	* inet/getnetgrent_r.c (nscd_getnetgrent): Use __rawmemchr instead
+	of rawmemchr.
+
 	* sysdeps/ieee754/ldbl-128ibm/s_isinf_nsl.c: New file.
 
 2011-10-09  Ulrich Drepper  <drepper@gmail.com>
